<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="ca.ualberta.dorsa.seccam.activities.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_weight="3"
        android:layout_marginTop="30dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logo_transparent"
        android:layout_width="match_parent"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/emailLogin"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/email"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/password"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>


    <Button
        android:id="@+id/signInButton"
        android:layout_weight="1"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        android:text="@string/login"
        android:onClick="login"
        android:layout_width="match_parent"
        android:background="@drawable/app_src_main_res_drawable_sign_up_bt"/>

    <TextView
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10sp"
        android:text="@string/signUpFromLogin"
        android:textAlignment="center"
        android:onClick="signUp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"/>



</androidx.appcompat.widget.LinearLayoutCompat>